<resources>
    <string name="app_name">Nil</string>
    <string name="account_tip">账号/手机号</string>
    <string name="password_tip">输入密码</string>
    <string name="register">注册</string>
    <string name="checkCode">发送验证码</string>
    <string name="retrospect">找回密码</string>
    <string name="username_hint">输入昵称</string>
    <string name="phone_hint">输入手机号</string>
    <string name="checkCode_hint">验证码</string>
    <string name="divider">|</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="search">搜索</string>
    <string name="send">发送</string>
    <string name="contact">联系人</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_msg">请输入关键字</string>
    <string name="null_data">无结果</string>
    <string name="todo">TODO</string>
    <string name="hint_contact_add">NIL号</string>
    <string name="loading">加载中…</string>
    <string name="nilNumber">NIL号:</string>
    <string name="admin">用户admin</string>
    <string name="point">·</string>
    <string name="user">用户</string>
    <string name="app_signature_hint">点击设置个性签名…</string>
    <string name="personal_signature_hint">用户很懒，什么都没有留下…</string>
    <string name="select_from_alum">从相册中选择</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="hint_verify_info">验证信息</string>
    <string name="hint_mem_name">联系人备注</string>
    <string name="tip_verify_info">请输入验证信息</string>
    <string name="tip_mem_name">请输入联系人备注</string>
    <string name="tip_select_group">请选择分组</string>
    <string name="default_group">我的好友</string>
    <string name="null_friend_verify">无验证消息</string>
    <string name="new_friend">新朋友</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="refused">已拒绝</string>
    <string name="agreed">已通过</string>
    <string name="add_friend">添加朋友</string>
    <string name="send_msg">发消息</string>
    <string name="non_msg">没有任何消息</string>
    <string name="waiting_ver">等待验证</string>
    <string name="friend_info">好友信息</string>
    <string name="complete">完成</string>
    <string name="read">标记已读</string>
    <string name="delete">删除</string>
    <string name="blank_tip">空空如也</string>
    <string name="signature_modify">修改签名</string>
    <string name="edit_info">编辑资料</string>
    <string name="header">头像</string>
    <string name="username_test">谁都没有错</string>
    <string name="signature">个性签名</string>
    <string name="username">用户名&#160;&#160;&#160;&#160;</string>
    <string name="signature_test">路漫漫其修远兮，吾将上下而求索</string>
    <string name="birth">出生日期</string>
    <string name="birth_test">2001–12–04</string>
    <string name="city">所在城市</string>
    <string name="city_test">湖北&#160;武汉</string>
    <string name="hint_username">输入新用户名</string>
    <string name="hint_signature">请输入个性签名</string>
    <string name="sex">性别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="sex_test">男</string>
    <string name="my_header">我的头像</string>
    <string name="current_header">当前头像</string>
    <string name="history_header">历史头像</string>
    <string name="change_header">更换头像</string>
    <string name="social_updates">好友动态</string>
    <string name="lh">神里绫华</string>
    <string name="update_test">路遥知马力日久见人心</string>
    <string name="time_test">昨天19:31</string>
    <string name="heart">❤&#160;&#160;</string>
    <string name="delivery">发表</string>
    <string name="write_post">写动态</string>
    <string name="hint_update_post">说点什么吧…</string>
    <string name="none_dynamic">还没有任何动态</string>
    <string name="my_album">我的相册</string>
    <string name="my_document">我的文件</string>
    <string name="my_favor">我的收藏</string>
    <string name="scan">扫一扫</string>
    <string name="setting">设置</string>
    <string name="modify_password">修改密码</string>
    <string name="setting_msg_notify">消息提示音</string>
    <string name="logout">退出登录</string>
    <string name="my_card">我的名片</string>
    <string name="visiting_card_tip">扫一扫添加我的好友</string>
    <string name="save">保存</string>
</resources>