<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddInfoActivity"
    android:orientation="vertical"
    android:background="@color/bg_default">
    <!--    导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_nav"
        android:id="@+id/add_nav_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:textColor="@color/bg_default"
            android:textSize="16sp"
            android:layout_margin="12dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/bg_default"
            android:textSize="16sp"
            android:layout_margin="12dp"
            android:id="@+id/add_cancel"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <!--    验证信息-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_verify_info"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/xui_config_color_gray_4"/>
    <com.xuexiang.xui.widget.edittext.ClearEditText
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@drawable/bg_edittext_add"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:gravity="top"
        android:maxLength="50"
        android:lineSpacingExtra="10dp"
        android:hint="@string/hint_verify_info"
        android:textColorHint="@color/xui_config_color_gray_4"
        android:id="@+id/cet_validation_info"/>

    <!--    备注-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_mem_name"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/xui_config_color_gray_4"/>
    <com.xuexiang.xui.widget.edittext.ClearEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_edittext_add"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:maxLength="10"
        android:hint="@string/hint_mem_name"
        android:textColorHint="@color/xui_config_color_gray_4"
        android:id="@+id/cet_mem_name"/>

    <!--    选择分组-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_select_group"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/xui_config_color_gray_4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_edittext_add"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:paddingStart="26dp"
        android:paddingEnd="26dp"
        android:id="@+id/select_group">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/default_group"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/add_tv_group"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/down_one"/>
    </LinearLayout>

    <!--    发送-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:cardBackgroundColor="@color/primary_200"
            app:contentPadding="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp"
            app:rippleColor="@color/primary_500"
            android:layout_alignParentBottom="true"
            android:id="@+id/btn_send_info">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center_vertical|center_horizontal"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</LinearLayout>