<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditInfoActivity"
    android:orientation="vertical"
    android:background="@color/bg_main">
    <!-- 导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_nav"
        android:id="@+id/edit_info_nav">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/back"
                android:layout_centerVertical="true"
                android:id="@+id/edit_info_back"
                android:layout_marginStart="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_info"
                android:textColor="@color/bg_default"
                android:textSize="16sp"
                android:layout_margin="12dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:textColor="@color/bg_default"
                android:textSize="16sp"
                android:layout_margin="12dp"
                android:id="@+id/edit_info_ok"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </RelativeLayout>

    <!-- 头像-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:padding="16dp"
        android:id="@+id/edit_info_header_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textColor="@color/black_light"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right_gray"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <!-- 用户名-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:padding="16dp"
        android:id="@+id/edit_info_username_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:id="@+id/edit_title_username"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_test"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:layout_toEndOf="@id/edit_title_username"
            android:layout_toStartOf="@id/edit_right_username"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/edit_info_username"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right_gray"
            android:id="@+id/edit_right_username"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <!-- 性别-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:padding="16dp"
        android:id="@+id/edit_info_sex_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:id="@+id/edit_title_sex"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_test"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:layout_toEndOf="@id/edit_title_sex"
            android:layout_toStartOf="@id/edit_right_sex"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/edit_info_sex"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right_gray"
            android:id="@+id/edit_right_sex"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <!-- 签名-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:id="@+id/edit_info_signature_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:id="@+id/edit_title_signature"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signature_test"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:layout_toEndOf="@id/edit_title_signature"
            android:layout_toStartOf="@id/edit_right_signature"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/edit_info_signature"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right_gray"
            android:id="@+id/edit_right_signature"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <!-- 出生日期-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:padding="16dp"
        android:id="@+id/edit_info_birth_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:id="@+id/edit_title_birth"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_test"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:layout_toEndOf="@id/edit_title_birth"
            android:layout_toStartOf="@id/edit_right_birth"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/edit_info_birth"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right_gray"
            android:id="@+id/edit_right_birth"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <!-- 所在城市-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:padding="16dp"
        android:id="@+id/edit_info_city_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:id="@+id/edit_title_city"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_test"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:layout_toEndOf="@id/edit_title_city"
            android:layout_toStartOf="@id/edit_right_city"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/edit_info_city"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/right_gray"
            android:id="@+id/edit_right_city"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>