<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddedFriendActivity"
    android:background="@drawable/bg_default_nav"
    android:orientation="vertical"
    android:id="@+id/added_friend_container">
    <!-- 导航栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_nav">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/back"
            app:shapeAppearance="@style/circleImageStyle"
            android:layout_centerVertical="true"
            android:id="@+id/added_friend_back"
            android:layout_marginStart="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_info"
            android:textColor="@color/bg_default"
            android:textSize="16sp"
            android:layout_margin="12dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:textColor="@color/bg_default"
            android:textSize="16sp"
            android:layout_margin="12dp"
            android:id="@+id/added_friend_ok"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--主体 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_default"
        android:orientation="vertical">
        <!--验证信息 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="20dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:shapeAppearance="@style/circleImageStyle"
                android:src="@mipmap/loadingheader"
                android:id="@+id/added_friend_header"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="神里绫华"
                    android:textColor="@color/xui_config_color_gray_1"
                    android:textSize="18sp"
                    android:id="@+id/added_friend_username"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="验证信息:我是神里绫华"
                    android:textColor="@color/xui_config_color_gray_3"
                    android:textSize="14sp"
                    android:id="@+id/added_friend_ver_info"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:ellipsize="end"/>
            </LinearLayout>
        </LinearLayout>

        <!--设置好友备注分组 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--    备注-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_mem_name"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/xui_config_color_gray_4"/>
            <com.xuexiang.xui.widget.edittext.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_edittext_add"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:maxLength="10"
                android:hint="@string/hint_mem_name"
                android:textColorHint="@color/xui_config_color_gray_4"
                android:id="@+id/added_friend_name_mem"/>

            <!--    选择分组-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_select_group"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/xui_config_color_gray_4"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/bg_edittext_add"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:id="@+id/added_friend_select_group">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/default_group"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:id="@+id/added_friend_group_name"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/down_one"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>