<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdatePostActivity"
    android:orientation="vertical"
    android:background="@color/bg_main">
    <!--    导航-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_default_nav"
        android:id="@+id/update_post_nav"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/back"
                android:layout_centerVertical="true"
                android:id="@+id/update_post_back"
                android:layout_marginStart="12dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_post"
                android:textColor="@color/bg_default"
                android:textSize="16sp"
                android:layout_margin="12dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textColor="@color/bg_default"
                android:textSize="16sp"
                android:layout_margin="12dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:id="@+id/update_post_delivery"/>
        </RelativeLayout>
    </RelativeLayout>
    <!--动态文本部分-->
    <com.xuexiang.xui.widget.edittext.ClearEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_default"
        android:minHeight="120dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:cursorVisible="true"
        android:textColor="@color/black_light"
        android:lineSpacingExtra="5dp"
        android:gravity="top"
        android:maxLength="5000"
        android:hint="@string/hint_update_post"
        android:textColorHint="@color/xui_config_color_gray_4"
        android:id="@+id/update_post_content_text"/>
    <!--    动图图片部分-->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/bg_default"
        android:id="@+id/update_post_content_image"/>
</LinearLayout>